# orthanc-s3-storage

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  compose.yml  docker.env
Resources/: SyncOrthancFolder.py
Resources/CMake/: AwsSdkConfiguration.cmake  OpenSslConfiguration.cmake
Resources/Orthanc/: DownloadOrthancFramework.cmake  LinuxStandardBaseToolchain.cmake  MinGW-W64-Toolchain32.cmake  MinGW-W64-Toolchain64.cmake
Resources/Orthanc/Core/: Endianness.h  Enumerations.cpp  Enumerations.h  Logging.cpp  Logging.h  OrthancException.h  PrecompiledHeaders.cpp  PrecompiledHeaders.h  Toolbox.cpp  Toolbox.h
Resources/Orthanc/Core/Cache/: LeastRecentlyUsedIndex.h
Resources/Orthanc/Plugins/Samples/Common/: ExportedSymbols.list  OrthancPluginCppWrapper.h  VersionScript.map
Resources/Orthanc/Resources/: EmbedResources.py  MinGWToolchain.cmake
Resources/Orthanc/Resources/CMake/: AutoGeneratedCode.cmake  BoostConfiguration.cmake  Compiler.cmake  DownloadPackage.cmake  JsonCppConfiguration.cmake
Resources/Orthanc/Sdk-1.3.2/orthanc/: OrthancCDatabasePlugin.h  OrthancCPlugin.h  OrthancCppDatabasePlugin.h
Resources/Orthanc/Sdk-1.4.0/orthanc/: OrthancCDatabasePlugin.h
Resources/Orthanc/Sdk-1.4.1/orthanc/: OrthancCPlugin.h
scripts/: Dockerfile  build-orthanc-webviewer.sh  build-orthanc.sh  build-s3-docker.sh  build-s3-storage.sh  docker-build-image.sh  docker-run-image.sh
scripts/docker-build/: Dockerfile  README.md  build-s3-plugin.sh  docker-build-image.sh  docker-run-image.sh
scripts/docker-build-orthanc/: Dockerfile  README.md  build-s3-plugin.sh  docker-build-image.sh  docker-run-image.sh
scripts/docker-run-orthanc/: Dockerfile  README.md  build-and-run-docker.sh  build-orthanc-in-docker.sh  run-orthanc-in-docker.sh
scripts/docker-run-orthanc/orthanc/: orthanc.json
src/: MemStreamBuf.hpp  OrthancPluginCppWrapper.cpp  OrthancPluginException.h  Plugin.c  Plugin.cpp  S3ops.cpp  S3ops.hpp  Timer.h  Timer.hpp  Utils.cpp  Utils.h  Utils.hpp  Version.hpp  Version.hpp.in  timer.h  utils.cpp  utils.h
tests/: Dockerfile  orthanc.json  test0.cpp  test1.cpp  test2.cpp
